--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,6 +1,7 @@
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
 	<input type="text" name="username" placeholder="Username:">
+	<!-- we didn't pass  password_digest because of has_secure_password-->
 	<input type="password" name="password" placeholder="Password:">
 	<input type="submit" value="Sign Up">
 </form>
